# dregs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  flake.nix  justfile  release-plz.toml  release.toml  result
.github/actions/install-dregs/: action.yml
.github/actions/install-mutr/: action.yml
.github/actions/install-solc/: action.yml
.github/workflows/: example-mutation-test.yml  lint.yml  mutation-test.yml  nix.yml  release-plz.yml  release.yml  test.yml
src/: cli.rs  config.rs  diff.rs  ignore.rs  lib.rs  main.rs  manifest.rs  partition.rs  report.rs  runner.rs
src/generator/: gambit.rs  mod.rs
templates/default/: flake.nix
tests/: cli.rs
tests/common/: mod.rs
tests/fixtures/simple/: .gitignore  dregs.toml  foundry.toml
tests/fixtures/simple/src/: Counter.sol
tests/fixtures/simple/test/: Counter.t.sol
tests/fixtures/with-imports/: foundry.toml
tests/fixtures/with-imports/lib/mylib/src/: Math.sol
tests/fixtures/with-imports/src/: Adder.sol
