[package]
name = "dregs"
version = "0.1.1"
edition = "2024"
description = "Solidity mutation testing runner for Foundry projects"
repository = "https://github.com/EspressoSystems/dregs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
gambit = { git = "https://github.com/Certora/gambit", tag = "v1.0.6" }
glob = "0.3.3"
toml = "0.9.9"
rayon = "1.11.0"
regex = "1.12.3"
env_logger = "0.11.9"
log = "0.4.29"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
